# automata

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.c  sample_automaton.cfg
examples/: build-examples.sh  example1.aut  example1.dot  example2.aut  example2.dot  example3.aut  example3.dot  example4.aut  example4.dot  example5.aut  example5.dot  sample_automaton.dot
include/: automata.c  automata.h
tests/: CMakeLists.txt  minunit.h  test.c  test_example1.c  test_example1.h  test_example2.h  test_example3.h  test_example4.h  test_example5.h
